<resources>
    <string name="app_name">MVP-Test</string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="hint">Enter User ID</string>
    <string name="email_placeholder">E-mail</string>
    <string name="password_placeholder">Password</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="implementation_warning">Content not implemented yet!!!</string>
    <string name="confirm_message">Press Confirm to delete User.</string>
    <string name="confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="first_name">First Name:</string>
    <string name="first_name_placeholder">First Name</string>
    <string name="create">Create</string>
    <string name="type">Type</string>
    <string name="last_name_placeholder">Last Name</string>
    <string name="last_name">Last Name:</string>
    <string-array name="type_choices">[
        <item>Student</item>
        <item>Landlord</item>
    </string-array>
    <string name="add_info">Add Info</string>

    <!--Payment -->
    <!--add edit-->
    <string name="make_your_payment">Make your payment</string>
    <string name="a_student_id">Student Id</string>
    <string name="a_landlord_id">Landlord Id</string>
    <string name="a_place_id">Place Name</string>
    <string-array name="payment_description">
        <item>Registration Fee</item>
        <item>Monthly Renewal Fee</item>
    </string-array>
    <string-array name="payment_method">
        <item>Credit/Debit Card</item>
        <item>Online Payment</item>
    </string-array>
    <string name="select_payment_method">Select your payment method</string>
    <string name="amount">Amount</string>
    <string name="conform">CONFORM</string>

    <!--detail-->
    <string name="your_payment_details">Your Payment Details</string>
    <string name="student_name">Student Name</string>
    <string name="landlord_name">Landlord Name</string>
    <string name="place_name">Place Name</string>
    <string name="payment_type">Payment Type</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_amount">Payment Amount</string>

    <!--edit-->
    <string name="edit_your_payment">Edit Your Payment</string>
    <string name="save">SAVE</string>

    <string name="phone_num"> Phone num</string>
    <string name="room_availibility"> Room Availibility</string>
    <string name="room_price"> Room price</string>
    <string name="room_types"> Room types</string>
    <string name="rules"> Rules</string>
    <string name="specialities"> Specialities</string>
    <string name="address"> Address</string>
    <string name="name_of_bordim"> Name of Bordim</string>
    <string name="reviews">Reviews</string>
    <string name="book">Book</string>
    <string name="phone">Phone</string>
    <string name="available">Available</string>
    <string name="features">Features</string>
    <string name="price">Price</string>
    <string name="select_image">Select Image</string>
    <string name="select_location">Select Location</string>
    <string name="amount_received">Amount Received:</string>
    <string name="payment_receipt">Payment Receipt</string>
    <string name="payment_invoice">Payment Invoice</string>
    <string name="amount_paid">Amount Paid:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="paid_with">Paid with</string>
    <string name="paid_in">Paid in</string>
    <string name="payment_description">Payment Description</string>
    <string name="select_your_payment_description">Select your payment description</string>
    <string name="select_your_payment_method">Select your payment method</string>
    <string name="place_phone">Place Phone</string>
    <string name="place_features">Place Features</string>
    <string name="place_address">Place Address</string>
    <string name="see_location">See Location</string>
    <string name="owner">Owner:</string>
    <string name="order">Order</string>
    <string name="pick_location">Pick Location</string>
    <string name="not_available">Not Available</string>
    <string name="price_text">Price:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
